# soalib

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
soalib/: CMakeLists.txt  soa.c  soa.h  soa.hpp  soa_json.c  soa_json.h  soa_json.hpp  soa_yaml.c  soa_yaml.h  soa_yaml.hpp
test/: CMakeLists.txt  main.cpp
